Fixed survey placement, Change arrow button colour and added text below, fixed alignment of password/email input boxes.

--- a/src/Pages/Dashboard/FootprintSlideshow/_FootprintSlideshow.scss
+++ b/src/Pages/Dashboard/FootprintSlideshow/_FootprintSlideshow.scss
@@ -3,48 +3,59 @@
   max-height: 400px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  
 
 
   h2{
     @include pageHeaderText($font-colour)
   }
 
-    #leftArrow{
+    .previousButton{
+      height: 6%;
       margin: 5%;
-      align-self: center;
-      border-radius: 5%;
-      border-left: 0px;
-      border-top: 40px solid #fff;
-      border-right: 85px solid $secondary-colour;
-      border-bottom: 40px solid #fff;
-      transition: all .1s ease-in;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      
+      .leftArrow{
+        background-color: #fff;
+        align-self: center;
+        border-radius: 5%;
+        border-left: 0px;
+        border-top: 40px solid #fff;
+        border-right: 85px solid $action-colour;
+        border-bottom: 40px solid #fff;
+        transition: all .1s ease-in;
 
         &:hover{
-          border-left: 0px;
-          border-right:85px solid $action-colour;
-          border-bottom: 50px solid #fff;
-          border-top: 50px solid #fff;
-        }
-     
+          border-right: 85px solid $button-Hover;
+        } 
+      }
     }
 
-    #rightArrow{
+    .nextButton{
+      height: 6%;
       margin: 5%;
-      border-radius: 10%;
-      align-self: center;
-      border-right: 0px;
-      border-top: 40px solid #fff;
-      border-left: 85px solid $secondary-colour;
-      border-bottom: 40px solid #fff;
-      transition: all .1s ease-in;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .rightArrow{
+        background-color: #fff;
+        margin: 5%;
+        border-radius: 10%;
+        align-self: center;
+        border-right: 0px;
+        border-top: 40px solid #fff;
+        border-left: 85px solid $action-colour;
+        border-bottom: 40px solid #fff;
+        transition: all .1s ease-in;
 
         &:hover{
-          border-left: 85px solid $action-colour;
-          border-right: 0px;
-          border-bottom: 50px solid #fff;
-          border-top: 50px solid #fff;
+          border-left: 85px solid $button-Hover;
         }
+      }
     }
   }
 
